--- a/aitnec5/css/food.css
+++ b/aitnec5/css/food.css
@@ -1,1 +1,1 @@
-.categoryGroup-list .placeholder:before{font-family:"Font Awesome 5 Free";font-weight:900;position:absolute;top:calc(50% - 27vw);left:calc(50% - 15vw);font-size:35vw}.categoryGroup-list .Bier .placeholder:before{content:"\f0fc"}
+.categoryGroup-list .placeholder:before{font-family:"Font Awesome 5 Free, serif";font-weight:900;position:absolute;top:calc(50% - 27vw);left:calc(50% - 15vw);font-size:35vw}.categoryGroup-list .Bier .placeholder:before{content:"\f0fc"}
